# roguelike

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  typos.toml
src/: camera.rs  cellular_automaton.rs  constants.rs  consts.rs  grid.rs  input.rs  main.rs  map.rs  movement.rs  noise.rs  player.rs  resources.rs  states.rs  tile.rs  ui.rs
src/actors/: blob.rs  constants.rs  mod.rs  player.rs  rabbit.rs
src/camera/: constant.rs  mod.rs
src/debug/: constants.rs  grid.rs  mod.rs  tile.rs
src/input/: constants.rs  mod.rs
src/map/: constants.rs  mod.rs  movement.rs  noise.rs  tile.rs
src/resources/: constants.rs  mod.rs  tileset.rs
