[package]
name = "havoc_resurgence"
version = "0.1.0"
edition = "2021"
authors = ["Cyprien Borée <cyprien.boree@tuta.io>"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"

[dependencies]
bevy = "0.12.1"
