[package]
name = "roguelike"
version = "0.1.0"
edition = "2021"
authors = ["Cyprien Borée <cyprien.boree@tuta.io>"]
description = "tactical tile-based 2D dungeon crawler roguelike"
repository = "https://github.com/boreec/roguelike"
keywords = ["tactical", "bevy", "roguelike", "tile-based", "turn-based"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
module_name_repetitions = "allow"

[dependencies]
bevy = {version = "0.13.1", features = ["dynamic_linking"]}
rand = "0.8.5"
